# quantized_distillation

./: README.md  main.py  pyproject.toml
new_model_weights/: feature_adaptive_distillation_result.pth  microresnet_cifar10_best.pth  microresnet_cifar10_distill_best.pth  microresnet_ghost_cifar10_distill_best.pth  progressive_distillation_result.pth
notebooks/: 2. base_distillation.ipynb  3. distill tiny_cnn.ipynb  4. base_distill_with_cifar10.ipynb
utils/: base_model.py  cifar100.py  distill_ghost_resnet.py  distill_loss.py  distill_microresnet_on_cifar10.py  download_cifar100.py  feature_adaptive_distillation.py  gridsearch_res.txt  learning_history.csv  micro_ghost_resnet.py  micro_resnet.py  persist.py  progressive_distillation.py  res_net.py  tiny_cnnPlus.py  train_microresnet_on_cifar10.py  train_resnet20_on_cifar10.py
